route function reworked